--- a/assect/layout.css
+++ b/assect/layout.css
@@ -181,7 +181,6 @@ nav ul li.btn.hide i:before {
     height: 100svh;
     z-index: 20;
     background-color: #E5BB89;
-
     right: 0;
     top: 0;
     width: 416px;
@@ -274,9 +273,30 @@ nav ul li.btn.hide i:before {
     display: grid;
     padding: 16px;
     gap: 8px;
-    max-height: calc(100svh - 58px);
+    max-height: calc(100svh - 118px);
     overflow: auto;
     scrollbar-gutter: stable;
+}
+
+.pagar-todo {
+    position: absolute;
+    right: 0;
+    bottom: 0%;
+    width: 100%;
+    display: grid;
+    padding: 8px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    height: 60px;
+    background-color: #6F5D44;
+}
+
+.mostrar_precio {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
 
 .grid {
@@ -359,4 +379,44 @@ nav ul li.btn.hide i:before {
     margin-bottom: 10px;
     padding: 16px;
     padding-bottom: 0;
+}
+
+/* Estilos para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 50;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 5px;
+}
+
+.close-btn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.close-btn:hover {
+    background-color: #45a049;
 }
