--- a/assect/layout.css
+++ b/assect/layout.css
@@ -1,7 +1,8 @@
 main {
-    min-height: calc(100svh - 212px);
-    max-height: calc(100svh - 212px);
-    background-color: #CCC5B7;
+    height: fit-content;
+    min-height: calc(100vh - (130px + 58px));
+    max-height: calc(100svh - (130px + 58px));
+    background-color: #e0dfdd;
     overflow: auto
 }
 
@@ -15,8 +16,8 @@ main {
 }
 
 nav {
-    background: #6F5D44;
-    padding: 5px 40px;
+    background: #050505;
+    padding: 5px 50px;
 }
 
 nav ul {
@@ -28,7 +29,7 @@ nav ul {
 }
 
 nav ul li {
-    padding: 15px 0;
+    padding: 6px 0;
     cursor: pointer;
 }
 
@@ -77,7 +78,7 @@ nav ul li a {
 }
 
 nav ul li:hover a {
-    color: #ff9500;
+    color: #fc9517;
 }
 
 nav ul li i {
@@ -135,13 +136,14 @@ nav ul li.btn.hide i:before {
 
 /* Pie de página */
 .footer {
-    background-color: #333;
+    background-color: #636262;
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 7px 0;
     position: relative;
     bottom: 0;
     width: 100%;
+    height: 100%;
 
 }
 
@@ -150,8 +152,8 @@ nav ul li.btn.hide i:before {
     height: 50px;
     width: 50px;
     position: absolute;
-    right: 25px;
-    top: 170px;
+    right: 50px;
+    top: 145px;
     padding: 7px;
     outline: none;
     border-style: none;
@@ -159,6 +161,7 @@ nav ul li.btn.hide i:before {
     opacity: 70%;
     color: white;
     cursor: pointer;
+    z-index: 20;
 }
 
 #btn-carrito ion-icon {
@@ -170,7 +173,7 @@ nav ul li.btn.hide i:before {
     height: 100svh;
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 30;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
 
@@ -179,8 +182,8 @@ nav ul li.btn.hide i:before {
 .container_carrito {
     position: fixed;
     height: 100svh;
-    z-index: 20;
-    background-color: #E5BB89;
+    z-index: 40;
+    background-color: #eeecec;
     right: 0;
     top: 0;
     width: 416px;
@@ -213,9 +216,9 @@ nav ul li.btn.hide i:before {
 }
 
 .card-close-button {
-    color: #ef4444;
+    color: #f80d0d;
     cursor: pointer;
-    transition: color 0.2s ease-in-out;
+    transition: color 0.s ease-in-out;
     border-style: none;
 }
 
@@ -256,7 +259,7 @@ nav ul li.btn.hide i:before {
 
 .card-pay-button {
     width: 100%;
-    background-color: #3b82f6;
+    background-color: #f7ab1f;
     color: white;
     padding: 0.5rem 0;
     border-radius: 0.375rem;
@@ -266,7 +269,7 @@ nav ul li.btn.hide i:before {
 }
 
 .card-pay-button:hover {
-    background-color: #2563eb;
+    background-color: #dd8705;
 }
 
 .container {
@@ -277,7 +280,6 @@ nav ul li.btn.hide i:before {
     overflow: auto;
     scrollbar-gutter: stable;
 }
-
 .pagar-todo {
     position: absolute;
     right: 0;
@@ -287,7 +289,7 @@ nav ul li.btn.hide i:before {
     padding: 8px;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     height: 60px;
-    background-color: #6F5D44;
+    background-color: #050505;
 }
 
 .mostrar_precio {
@@ -298,7 +300,6 @@ nav ul li.btn.hide i:before {
     align-items: center;
     color: #fff;
 }
-
 .grid {
     display: grid;
     justify-content: center;
@@ -385,7 +386,7 @@ nav ul li.btn.hide i:before {
 .modal {
     display: none;
     position: fixed;
-    z-index: 50;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
@@ -420,8 +421,6 @@ nav ul li.btn.hide i:before {
 .close-btn:hover {
     background-color: #45a049;
 }
-
-
 
 #btn-menu {
     display: none;
@@ -491,11 +490,11 @@ nav ul li.btn.hide i:before {
     .menu_desplegrable {
         display: block;
         position: fixed;
-        top: 148px;
-        background-color: #6F5D44;
+        top: 130px;
+        background-color: #050505;
         left: 0;
         z-index: 2414;
         width: 100vw;
-        height: calc(100svh - 148px);
+        height: calc(100svh - 130px);
     }
 }
